# data-science-studies

./: LICENSE
ml-studies/: pyproject.toml
ml-studies/src/ml_studies/: consumer_behavior(random forest + xgboost).ipynb  data_manipulation_exercises.ipynb
ml-studies/src/ml_studies/datasets/: DGS10.csv  Futures_Resources_Data.csv
