[project]
name = "ml-studies"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "statsmodels (>=0.14.4,<0.15.0)"
]

[tool.poetry]
packages = [{include = "ml_studies", from = "src"}]


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.6"
notebook = "^7.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
